# LoRA-BERT

./: .gitignore  RAMoLE.md  README.md  observations.ipynb  prototyping.ipynb  pyproject.toml  run_exps.sh  sequential_low_rank_regression.ipynb  train.py  train_SeqLoRAs.py  train_stacked_loras.py
hparams/: lora-bert-cola_kqv.yaml  lora-bert-mnli_kqv.yaml  lora-bert-sst2_cola-trained-cola.yaml  lora-bert-sst2_cola-trained-sst2.yaml  lora-bert-sst2_kqv.yaml
src/: config.py  data.py  models.py  utils.py
src/data/: __init__.py  cola.py  mnli.py  sst2.py
src/models/: __init__.py  peft_for_seq_classification.py  sequential_lora_for_classification.py
state_dicts/: init-lora-bert_kqv.pt  lora-bert-cola_cls.pt  lora-bert-cola_kqv_ALL.pt  lora-bert-cola_sst2_kqv_LORA.pt  lora-bert-mnli_kqv_ALL.pt  lora-bert-sst2_cls.pt  lora-bert-sst2_cola-trained-cola_ALL.pt  lora-bert-sst2_cola-trained-sst2_ALL.pt  lora-bert-sst2_cola_kqv_LORA.pt  lora-bert-sst2_kqv.pt  lora-bert-sst2_kqv_ALL.pt  lora-bert_kqv_INIT.pt
