[tool.poetry]
name = "lorabert"
version = "0.1.0"
description = ""
authors = ["nikhil-chigali <nikhil.chigali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.2.1+cu121", source = "torchwheels"}
transformers = {extras = ["torch"], version = "^4.38.2"}
datasets = "^2.17.1"
torchvision = {version = "^0.17.1+cu121", source = "torchwheels"}
torchsummary = "^1.5.1"
pytest = "^8.0.2"
huggingface-hub = {extras = ["cli"], version = "^0.21.3"}
accelerate = "^0.27.2"
scikit-learn = "^1.4.1.post1"
gpustat = "^1.1.1"
matplotlib = "^3.8.3"
click = "^8.1.7"
lightning = "^2.2.1"
torchmetrics = "^1.3.1"
peft = "^0.11.1"
ml-collections = "^0.1.1"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "torchwheels"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"